[project]
name = "xz3r0-nodes"
description = "Custom ComfyUI nodes: XAudioSave, XImageResize, XImageSave, XLatentLoad, XLatentSave, XMarkdownSave, XVideoSave, XWorkflowSave, XAnyGate10, XAnyToString, XDateTimeString, XImageCompare, XKleinRefConditioning, XMath, XMemoryCleanup, XResolution, XSeed, XStringGroup, XStringWrap, XAudioGet, XDataSave, XImageGet, XLoraGet, XStringGet, XVideoGet. Custom ComfyUI extensions: XDataHub, XFitView"
version = "2.1.1"
license = { file = "LICENSE" }

dependencies = ["ffmpeg-python"]

[project.urls]
Repository = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/wiki"
"Bug Tracker" = "https://github.com/Xz3r0-M/ComfyUI-Xz3r0-Nodes/issues"

[tool.comfy]
PublisherId = "xz3r0"
DisplayName = "ComfyUI-Xz3r0-Nodes"
Icon = "https://avatars.githubusercontent.com/u/67074212"
includes = []

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --ignore=__init__.py"
testpaths = ["tests"]
